# pythonik

./: COMPAT.md  README.md  pyproject.toml  test_get_segments_integration.py
.github/workflows/: create-release.yml  publish.yml  test.yml  version-check.yml
docs/: CHANGELOG.md
pythonik/: __init__.py
pythonik/_base/: __init__.py
pythonik/acls/: __init__.py
pythonik/acls/models/: __init__.py  ac_ls_schema.py  acl_schema.py  acl_template_schema.py  acl_templates_schema.py  bulk_ac_ls_object_schema.py  bulk_ac_ls_object_schema_permissions_item.py  bulk_acl_schema.py  bulk_create_share_ac_ls.py  bulk_delete_share_ac_ls.py  check_bulk_ac_ls_schema.py  combined_permissions_schema.py  copy_inherited_acl_schema.py  create_ac_ls_result_schema.py  create_ac_ls_schema.py  create_ac_ls_schema_mode.py  create_ac_ls_schema_mode_type_1.py  create_ac_ls_schema_multiple.py  create_bulk_ac_ls_schema.py  (+154 more)
pythonik/assets/: __init__.py
pythonik/auth/: __init__.py
pythonik/automations/: __init__.py
pythonik/files/: __init__.py
pythonik/jobs/: __init__.py
pythonik/metadata/: __init__.py
pythonik/ml/: __init__.py  client.py
pythonik/models/: base.py
pythonik/notifications/: __init__.py  types.py
pythonik/search/: __init__.py
pythonik/settings/: __init__.py  errors.py
pythonik/specs/: assets.py  base.py  files.py  metadata.py
pythonik/stats/: __init__.py
pythonik/tests/: test_assets_history.py  test_files_extensions.py  test_metadata.py  test_real.py
pythonik/transcode/: __init__.py
pythonik/users/: __init__.py
pythonik/usersnotifications/: __init__.py
(+7197 files in other folders)
