[project]
name = "pythonik"
version = "2.0.0"
description = "Complete generated Python SDK for the iconik media management API (15 services)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.23.1,<0.29.0",
    "attrs>=22.2.0",
    # 1.x compat layer (pythonik.client / pythonik.specs / pythonik.models)
    "pydantic>=2.4.2",
    "requests>=2.31.0",
]

[project.urls]
Generator = "https://github.com/NorthShoreAutomation/iconik-sdk-generator"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pythonik*"]

[tool.setuptools.package-data]
pythonik = ["py.typed"]
